tests/namespace/namespace.exp
Error ----------------------------------------------------------- client.js:3:19

Cannot assign `ns.foo` to `bar` because number is incompatible with string.

Error: client.js:3
  3: var bar: string = ns.foo
                       ^^^^^^ Cannot assign `ns.foo` to `bar` because number [1] is incompatible with string [2].
  References:
   17: module.exports = { foo: ("": number) };
                                    ^^^^^^ [1]: number. See: namespace.js:17
    3: var bar: string = ns.foo
                ^^^^^^ [2]: string

Error -------------------------------------------------------- namespace.js:3:23

Cannot assign function to `f` because in the first argument, string is
incompatible with number.

Error: namespace.js:3
  3: var f: T = function(x:string): void { }
                           ^^^^^^ Cannot assign function to `f` because in the first argument, string [1] is incompatible with number [2].
  References:
    3: var f: T = function(x:string): void { }
                             ^^^^^^ [1]: string
    2: type T = (x:number) => void;
                   ^^^^^^ [2]: number

Error ------------------------------------------------------- namespace.js:11:16

Cannot assign `bar(...)` to `y` because string is incompatible with number.

Error: namespace.js:11
 11: var y:number = bar(0, x => "");
                    ^^^^^^^^^^^^^^^ Cannot assign `bar(...)` to `y` because string [1] is incompatible with number [2].
  References:
   11: var y:number = bar(0, x => "");
                                  ^^ [1]: string
   11: var y:number = bar(0, x => "");
             ^^^^^^ [2]: number

Error ------------------------------------------------------- namespace.js:15:16

Cannot assign array literal to `s2` because in type argument `T` and then type
argument `T`, string is incompatible with number.

Error: namespace.js:15
 15: var s2:Seq = [[""]];
                    ^^ Cannot assign array literal to `s2` because in type argument `T` and then type argument `T`, string [1] is incompatible with number [2].
  References:
   15: var s2:Seq = [[""]];
                      ^^ [1]: string
   13: type Seq = number | Array<Seq>;
                  ^^^^^^ [2]: number

Error ------------------------------------------------------- namespace.js:17:26

Cannot cast empty string to number because string is incompatible with number.

Error: namespace.js:17
 17: module.exports = { foo: ("": number) };
                              ^^ Cannot cast empty string to number because string [1] is incompatible with number [2].
  References:
   17: module.exports = { foo: ("": number) };
                                ^^ [1]: string
   17: module.exports = { foo: ("": number) };
                                    ^^^^^^ [2]: number


Found 5 errors
